--- a/index.html
+++ b/index.html
@@ -1,103 +1,44 @@
 <!DOCTYPE html>
-<!--[if IE 7]><html class="ie7" lang="en"><![endif]-->
-<!--[if IE 8]><html class="ie8" lang="en"><![endif]-->
-<!--[if IE 9]><html class="ie9" lang="en"><![endif]-->
-<!--[if gt IE 9]><!--> <html lang="en"> <!--<![endif]-->
 <html>
 <head>
-<title>Ethan Herr Music</title>
-<!-- primary -->
-<link href="http://fonts.googleapis.com/css?family=Titillium+Web:400,700,200" rel="stylesheet" type="text/css">
-<link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Oxygen:700,400,300' rel='stylesheet' type='text/css'>
-
-<!-- secondary -->
-<link href='http://fonts.googleapis.com/css?family=Molle:400italic' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Monsieur+La+Doulaise' rel='stylesheet' type='text/css'>
-
-<link rel="stylesheet" type="text/css" href="normalize.css">
-<link rel="stylesheet" type="text/css" href="dinks-dark.css">
-<script type="text/javascript" src="js/utils.js"></script>
-<script type="text/javascript" src="js/jquery1.10.2.js"></script>
-<script type="text/javascript" src="js/soundmanager2.js"></script>
-<script type="text/javascript" src="js/playlist.js"></script>
-<!-- <script type="text/javascript" src="js/jqueryeasing.js"></script> -->
+<title>Ethan Herr</title>
 </head>
-<body class="home">
 
-<div class="header">
-	<div class="bkg"></div>
-	<div class="nav">
+<style>
+	body {
+		font-family:'Courier New', Courier, monospace;
+		font-size: 1.5rem;
+		background-color: #f8fbf8;
+	}
+	main {
+		display: flex;
+    flex-flow: column;
+    height: 100vh;
+		max-width: 800px;
+		justify-content: center;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	ul {
+		list-style: square;
+	}
+</style>
+
+<body>
+
+	<main>
+		<p><b>My name is Ethan Herr.</b></p>
+		<p>You can find me doing things at one of these fine locations:</p>
 		<ul>
-			<li><a href="#listen">Listen</a></li>
-			<li><a href="about.html">About</a></li>
-			<!-- <li>News</li> -->
-			<li><a href="contact.html">Contact</a></li>
-			<li><a href="videos.html">Videos</a></li>
-
+			<li><a href="https://github.com/herrethan">Github</a> software work</li>
+			<li><a href="https://herrmedia.com">Herrmedia</a> software and motion graphics work</li>
+			<li><a href="https://soundcloud.com/ethan-herr">Soundcloud</a> recordings</li>
+			<li><a href="https://www.linkedin.com/in/ethan-herr-4565893/">Linkedin</a> profile</li>
+			<li>Some random <a href="https://vimeo.com/herrethan">Vimeo</a> creations</li>
+			<li>Member of the <a href="https://www.youtube.com/channel/UCytk9m20uRpdVBuk96kMXDg">Duke Baxter Band</a></li>
+			<li>Sometimes playing with <a href="https://www.craigbrann.com/">Craig Brann</a></li>
 		</ul>
-	</div>
-	<h1>Ethan Herr
-		<!-- <div class="badge">
-		<svg xmlns="http://www.w3.org/2000/svg" height="230px" width="230" viewBox="0 0 230 230"><path fill="#FFFFFF" d="M26.933,112.022C62.511,92.075,98.09,72.128,133.668,52.181c-0.899,0.118-1.798,0.235-2.697,0.353 c24.875,6.364,50.15,13.02,75.654,16.232c-0.589-2.174-1.178-4.348-1.767-6.522c-25.032,16.768-50.54,33.118-76.672,48.118 c-4.58,2.629-9.436,5.557-14.242,7.469c-3.137,1.249-7.039,1.061-11.043,1.204c-16.665,0.597-33.657,0.103-50.157-2.401 c-6.885-1.045-20.754-2.317-24.556-9.4c-2.135-3.978-8.178-0.443-6.044,3.533c2.655,4.947,8.347,7.353,13.378,9.101 c7.549,2.623,15.66,3.693,23.563,4.609c15.822,1.834,32.004,2.229,47.91,1.378c9.977-0.533,17.725-5.41,26.266-10.335 c15.337-8.844,30.312-18.33,45.238-27.843c10.014-6.382,20.026-12.78,29.893-19.389c3.081-2.063,1.632-6.094-1.767-6.522 c-19.03-2.397-37.875-7.228-56.498-11.707c-5.581-1.343-11.155-2.715-16.719-4.128c-2.352-0.598-3.898,0.556-5.838,1.644 C103.563,61.034,79.557,74.494,55.55,87.953C44.833,93.961,34.117,99.97,23.4,105.978 C19.463,108.186,22.991,114.232,26.933,112.022z"/><polyline fill="none" stroke="#FFFFFF" stroke-width="7" stroke-miterlimit="10" points="32.813,115.5 15.25,136.512 27.5,136.512 31.004,145.155 52.079,120.305"/><path fill="#FFFFFF" d="M41.248,134.273c23.163,15.092,46.326,30.185,69.488,45.277c0.942,0.613,2.603,0.705,3.533,0 c22.562-17.098,45.123-34.195,67.685-51.293c3.548-2.689,0.067-8.773-3.533-6.045c-22.562,17.098-45.123,34.195-67.685,51.293 c1.178,0,2.355,0,3.533,0c-23.163-15.092-46.326-30.185-69.488-45.277C40.987,125.757,37.482,131.819,41.248,134.273 L41.248,134.273z"/><path fill="#FFFFFF" d="M203.436,110.925c5.214-4.08,10.428-8.16,15.641-12.24c1.793-1.403,1.087-4.486-0.708-5.497 c-5.45-3.07-10.901-6.14-16.352-9.209c-3.938-2.218-7.466,3.83-3.533,6.044c5.45,3.07,10.901,6.14,16.352,9.209 c-0.236-1.832-0.472-3.665-0.708-5.497c-5.214,4.081-10.428,8.161-15.641,12.241 C194.934,108.756,199.925,113.673,203.436,110.925L203.436,110.925z"/><polyline fill="none" stroke="#FFFFFF" stroke-width="7" stroke-miterlimit="10" points="178.307,83.65 181.209,135.833 196.507,161.227 202.833,134.5 197.324,71.384"/><path fill="none" stroke="#FFFFFF" stroke-width="7" stroke-miterlimit="10" d="M176.981,59.813c0,0-1.814-12.911,9.773-12.911 c10.045,0,9.791,16.812,9.791,16.812"/><path fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" d="M147.959,107.426"/><path fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" d="M173.727,110.104"/><path fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" d="M157.866,100.337"/><path fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" d="M183.058,102.798"/><path fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" d="M154.51,125.06"/><path fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" d="M179.777,100.001"/><path fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" d="M112.204,159.609"/><path fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" d="M45.373,117.615"/><line fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" x1="75.774" y1="120.313" x2="124.343" y2="150.257"/><line fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" x1="99.024" y1="121.091" x2="133.421" y2="142.654"/><polyline fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" points="117,119.154 142.753,135.349 114.204,157.609 53.236,119.299 "/><path fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" d="M112.204,159.609"/><line fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" x1="138.36" y1="132.586" x2="109.153" y2="154.498"/><path fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" d="M155.178,124.228"/><line fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" x1="145.099" y1="104.41" x2="165.316" y2="116.875"/><line fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" x1="155.977" y1="97.726" x2="174.395" y2="109.272"/><polyline fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" points="181.702,103.545 155.178,124.228 134.099,110.981 "/><line fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" x1="166.507" y1="91.138" x2="181.567" y2="100.609"/><path fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" d="M155.178,124.228"/><line fill="none" stroke="#F1F2F2" stroke-width="2" stroke-miterlimit="10" x1="179.334" y1="99.204" x2="150.127" y2="121.116"/></svg>
-		</div> -->
-	</h1>
-	<h2 class="blurb">I compose, perform, and produce music.</h2>
-	<!--<h2>music</h2>-->
-</div>
-
-<div class="nav tracks-head">
-	<a id="listen"></a>
-	<div>
-    	<label for="genre">You are listneing to:</label>
-    	<select id="genre" class="btn"></select><div class="carrot"></div>
-    </div>
-	<div>
-		<input id="tags" type="text" placeholder="search by keyword">
-		<button type="submit" class="btn" name="search" for="tags">
-			<span class="offscreen">Search</span><div></div>
-		</button>
-	</div>
-	<div>
-    	<button id="playall" class="btn on"><span>Continuous Play</span></button>
-    </div>
-</div>
-
-<div class="content">
-	<div class="bkg"></div>
-	<!-- <h2><span>Have a listen</span></h2> -->
-	
-	<div class="tracks"></div>
-  
-</div>
-
-<footer class="nav">
-	<p>&copy; Copyright 2013 Ethan Herr Music, all rights reserved.</p>
-	<p>In otherwords, hey, don't steal. All you have to do is <a href="contact.html">ask me</a> if you want something.</p>
-</footer>
-<script>
-	playlist({
-		dropdown : '#genre',
-		playall : '#playall',
-		search : '#tags',
-		searchbutt : 'button[name="search"]',
-		tracks : '.tracks'
-	});
-</script>
-
-<script>
-$(document).ready(function(){
-	$('a[href="#listen"]').click(function(e){
-		e.preventDefault();
-		//window.scrollTop($('#listen').scrollTop())
-		var a = $('#listen').offset();
-		$('html, body').animate({scrollTop: a.top+'px'}, 400)
-	})
-
-})
-
-
-</script>
+	</main>
 
 </body>
 </html>
