update with instagram link

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			<li><a href="https://herrmedia.com">Herrmedia</a> software and motion graphics work</li>
 			<li><a href="https://soundcloud.com/ethan-herr">Soundcloud</a> recordings</li>
 			<li><a href="https://www.linkedin.com/in/ethan-herr-4565893/">Linkedin</a> profile</li>
+			<li><a href="https://www.instagram.com/herrethand/">Instagram</a> of crafty things</li>
 			<li>Some random <a href="https://vimeo.com/herrethan">Vimeo</a> creations</li>
 			<li>Member of the <a href="https://www.youtube.com/channel/UCytk9m20uRpdVBuk96kMXDg">Duke Baxter Band</a></li>
 			<li>Sometimes playing with <a href="https://www.craigbrann.com/">Craig Brann</a></li>
